# Falk

./: .cursorrules  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docusaurus.config.js  env.example  falk_project.yaml  index.html  mkdocs.yml  package-lock.json  package.json  profiles.yml  pyproject.toml  semantic_models.yaml  sidebars.js  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  release.yml  test.yml
app/: __init__.py  mcp.py  slack.py  web.py
cli/: index.html
cli-reference/: index.html
concepts/context-engineering/: index.html
concepts/evals/: index.html
concepts/how-it-works/: index.html
concepts/learning/: index.html
concepts/metric-decomposition/: index.html
concepts/tools/: index.html
configuration/: index.html
configuration/agent/: index.html
configuration/llm-providers/: index.html
configuration/metric-relationships/: index.html
configuration/semantic-models/: index.html
configuration/tuning/: index.html
contributing/: index.html
deployment/langfuse/: index.html
deployment/logfire/: index.html
deployment/slack/: index.html
deployment/web-ui/: index.html
docs/: cli-reference.md  cli.md  contributing.md  custom.css  index.md  why-falk.md
docs/concepts/: agent-skills.md  context-engineering.md  context.md  evals.md  how-it-works.md  learning.md  memory.md  metric-decomposition.md  state.md  tools.md
docs/configuration/: agent.md  index.md  llm-providers.md  metric-relationships.md  semantic-models.md  skills.md  tuning.md
docs/deployment/: docker.md  langfuse.md  logfire.md  slack.md  web-ui.md
docs/getting-started/: installation.md  mcp.md  quickstart.md
docs/reference/: where-syntax.md
getting-started/installation/: index.html
getting-started/mcp/: index.html
getting-started/quickstart/: index.html
reference/where-syntax/: index.html
search/: search_index.json
src/css/: custom.css
src/falk/: __init__.py  access.py  agent.py  cli.py  example.py  feedback.py  langfuse_integration.py  llm.py  prompt.py  pydantic_agent.py  quality.py  repository_sync.py  session.py  settings.py  slack_markdown.py  slack_policy.py  validation.py  web.py
src/falk/backends/: __init__.py
src/falk/cli/: __init__.py  format.py  main.py
src/falk/evals/: __init__.py  __main__.py  cases.py  pydantic_adapter.py  runner.py
src/falk/llm/: __init__.py  builder.py  memory.py  results.py  state.py  tools.py
src/falk/mcp/: __init__.py  server.py  tools.py
src/falk/observability/: __init__.py  feedback.py  langfuse.py
src/falk/scaffold/: .env.example  Dockerfile  RULES.md  docker-compose.yml  falk_project.yaml  profiles.yml  seed_data.py  semantic_models.yaml  semantic_models_media.yaml
src/falk/services/: __init__.py  query_service.py
src/falk/slack/: __init__.py  formatting.py  policy.py
tests/: test_access.py  test_evals.py  test_extensions.py  test_llm_state.py  test_llm_tools_disambiguate.py  test_memory.py  test_session_store.py  test_settings.py  test_slack_formatting.py  test_slack_policy.py  test_validation.py
tests/integration/: test_cli.py  test_mcp_health.py  test_web_health.py  test_web_startup.py
tests/tools/: test_calculations.py
why-falk/: index.html
(+27 files in other folders)
